@@ -1539,43 +1539,43 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
         self.verifyTool('portal_cpsportlets',
                         'CPSPortlets', 'CPS Portlets Tool')
         self.log("Adding cps default portlets")
-        portlets = {
-            'top_tabs': {'type': 'Navigation Portlet',
+        portlets = (
+               {'type': 'Navigation Portlet',
                 'slot': 'toptabs',
                 'display': 'navigation_tree',
                 'Title': 'Navigation',
                },
-            'breadcrumbs': {'type': 'Breadcrumbs Portlet',
+               {'type': 'Breadcrumbs Portlet',
                 'slot': 'top',
                 'display': 'horizontal_trail',
                 'order': 0,
                 'Title': 'Breadcrumbs',
                 },
-            'user_actions': {'type': 'Actions Portlet',
+               {'type': 'Actions Portlet',
                 'slot': 'left',
                 'order': 0,
                 'categories': ['user'],
                 'Title': 'User actions',
                 },
-            'global_actions': {'type': 'Actions Portlet',
+               {'type': 'Actions Portlet',
                 'slot': 'left',
                 'order': 10,
                 'categories': ['global'],
                 'Title': 'Portal actions',
                 },
-            'folder_actions': {'type': 'Actions Portlet',
+               {'type': 'Actions Portlet',
                 'slot': 'right',
                 'order': 10,
                 'categories': ['folder'],
                 'Title': 'Folder actions',
                 },
-            'object_actions': {'type': 'Actions Portlet',
+               {'type': 'Actions Portlet',
                 'slot': 'right',
                 'order': 0,
                 'categories': ['object', 'workflow'],
                 'Title': 'Object actions',
                 },
-            'address': {'type': 'Text Portlet',
+               {'type': 'Text Portlet',
                 'slot': 'bottom',
                 'Title': 'Address',
                 'text': '<address>Nuxeo - 18-20, rue Soleillet, 75020 Paris France<br />Email : <a href="mailto:contact@nuxeo.com">contact@nuxeo.com</a> - Tel: +33 (0)1 40 33 79 87 - Fax: +33 (0)1 40 33 71 41</address>',
@@ -1583,19 +1583,19 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'text_position': 'html',
                 'order': 0,
                 },
-            'conformance_statement': {'type': 'Custom Portlet',
+               {'type': 'Custom Portlet',
                 'slot': 'bottom',
                 'custom_cache_params': [],
                 'order': 10,
                 'render_method': 'portlet_conformance_statement',
                 'Title': 'Conformance statement',
                 },
-            'language_selector': {'type': 'Language Portlet',
+               {'type': 'Language Portlet',
                 'slot': 'left',
                 'action': 'change',
                 'Title': 'Language selector',
                 },
-            'navigation': {'type': 'Navigation Portlet',
+               {'type': 'Navigation Portlet',
                 'slot': 'left',
                 'order': 50,
                 'display': 'navigation_tree',
@@ -1603,7 +1603,7 @@ return state_change.object.content_unlock_locked_before_abandon(state_change)
                 'Title': 'Navigation',
                 },
 
-        }
+        )
         self.verifyPortlets(portlets)
 
     def setupBoxes(self):
