@@ -24,6 +24,7 @@ Bug fixes:
   example useful for the case of CPSWiki where the isInWorkspace script was
   returning False.
 - fix: setup portlets only on installation not on updates
+- verifyPortlets() now uses a tuples of dictionaries for 'portlets'.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Reverted DocRenderBox.getContent() naming to DocRenderBox.getContents() to
